<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traj_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dborrman@todo.todo">dborrman</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>turtlesim</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
